@@ -1,3 +1,9 @@
+2006-10-07    <Daddy@C-3PO>
+
+	* lib/Lingua/Alphabet/Phonetic/NATO.pm: updated the "See Also" section
+
+	* lib/Lingua/Alphabet/Phonetic.pm: updated the "See Also" section
+
 2006-10-06    <Daddy@C-3PO>
 
 	* Makefile.PL: typo
